--- a/exercises/05_mcp.ipynb
+++ b/exercises/05_mcp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6564d71f",
+   "id": "6b8fb6d2",
    "metadata": {},
    "source": [
     "# Exercise 5: Intro to MCP\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfbaa8c0",
+   "id": "27a4dc1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8286ba6",
+   "id": "f88edf60",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5a2a0d1",
+   "id": "fe070dad",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a993c6b",
+   "id": "f83327f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,23 +73,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9ab96d",
+   "id": "059a7de9",
    "metadata": {},
    "source": [
     "# Deployment\n",
     "\n",
-    "Head to \"Compute\" -> \"Apps\" -> \"Create Custom App\"\n",
-    "\n",
-    "Now let's define an agent that will use the tools from the MCP server.\n"
+    "* Head to \"Compute\" -> \"Apps\" -> \"Create Custom App\"\n",
+    "* Click Deploy and select the app folder (\".../agent-mcp-hackathon/exercises/custom_mcp_server\").\n",
+    "* You'll need to give permission to a service principle to access this app (more below).\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b486c35d",
+   "id": "376606e6",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
+    "# MCP Client\n",
     "\n",
     "Now let's define an agent that will use the tools from the MCP server.\n",
     "\n",
@@ -99,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f9609f",
+   "id": "46481a05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a25084",
+   "id": "2c9d65df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b143a103",
+   "id": "a4f72e52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04cbb9fc",
+   "id": "36153481",
    "metadata": {},
    "source": [
     "\n",
@@ -190,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48751581",
+   "id": "340415fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35c23e9c",
+   "id": "f033fa68",
    "metadata": {},
    "outputs": [],
    "source": [
