--- a/exercises/06_code_execution.ipynb
+++ b/exercises/06_code_execution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "61ccf378",
+   "id": "7ca85405",
    "metadata": {},
    "source": [
     "# Exercise 6: Code Execution vs Tool Calling\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccaf756b",
+   "id": "e026cb34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "496c77f2",
+   "id": "d718c54f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -34,10 +34,9 @@
     "from langchain.agents import create_agent\n",
     "from langchain.messages import AIMessage, HumanMessage\n",
     "from langchain.tools import tool\n",
+    "from llm import model as llm\n",
     "from smolagents import LocalPythonExecutor\n",
     "from smolagents.local_python_executor import InterpreterError\n",
-    "\n",
-    "from llm import llm\n",
     "\n",
     "df = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/datasciencedojo/datasets/refs/heads/master/titanic.csv\"\n",
@@ -75,6 +74,8 @@
     "        return f\"Stdout:\\n{str(interpreter.state['_print_outputs'])}\\nOutput: {output}\"\n",
     "    except InterpreterError as e:\n",
     "        return f\"There was an error: {e}\"\n",
+    "\n",
+    "\n",
     "# </solution>\n",
     "\n",
     "\n",
@@ -89,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab2e17e9",
+   "id": "4b887c38",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -107,8 +108,6 @@
     "    }\n",
     ")\n",
     "\n",
-    "\n",
-    "\n",
     "# Print the message history\n",
     "for msg in response[\"messages\"]:\n",
     "    if type(msg) is AIMessage and msg.tool_calls:\n",
@@ -122,8 +121,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a7cce5",
-   "metadata": {},
+   "id": "711478a5",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# Exercise 6.3: Implement Memory Tools\n",
@@ -135,8 +136,9 @@
     "# 3. Implement `recall_memory(query: str)` to search the store using semantic search.\n",
     "\n",
     "import uuid\n",
+    "\n",
     "from langgraph.store.memory import InMemoryStore\n",
-    "from llm import embeddings, embedding_dimensions\n",
+    "from llm import embedding_dimensions, embeddings\n",
     "\n",
     "# <solution>\n",
     "# Initialize the store with the embedding model and dimensions\n",
@@ -147,12 +149,13 @@
     "    }\n",
     ")\n",
     "\n",
+    "\n",
     "@tool\n",
     "def create_memory(key: str, value: str, category: str = \"result\"):\n",
     "    \"\"\"\n",
     "    Stores a piece of information in long-term memory.\n",
     "    Useful for saving results to avoid re-calculation, or errors to avoid repeating them.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        key: A short descriptive key or title for the memory.\n",
     "        value: The content/details to remember.\n",
@@ -164,19 +167,18 @@
     "    # Namespace based on category\n",
     "    namespace = (\"global\", category)\n",
     "    memory_id = str(uuid.uuid4())\n",
-    "    \n",
+    "\n",
     "    memory_store.put(\n",
-    "        namespace,\n",
-    "        memory_id,\n",
-    "        {\"key\": key, \"value\": value, \"category\": category}\n",
+    "        namespace, memory_id, {\"key\": key, \"value\": value, \"category\": category}\n",
     "    )\n",
     "    return f\"Stored memory {memory_id} in category '{category}'\"\n",
+    "\n",
     "\n",
     "@tool\n",
     "def recall_memory(query: str, category: str = \"result\"):\n",
     "    \"\"\"\n",
     "    Retrieves information from long-term memory based on a query.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        query: Search term to find relevant memories using semantic search.\n",
     "        category: The category to search in. use 'result' for past analysis, 'error' for coding patterns/restrictions.\n",
@@ -184,23 +186,27 @@
     "    namespace = (\"global\", category)\n",
     "    # Search for top 3 most relevant memories\n",
     "    results = memory_store.search(namespace, query=query, limit=3)\n",
-    "    \n",
+    "\n",
     "    if not results:\n",
     "        return f\"No relevant memories found in category '{category}'.\"\n",
-    "    \n",
+    "\n",
     "    formatted_results = []\n",
     "    for item in results:\n",
     "        content = item.value\n",
-    "        formatted_results.append(f\"[{content['category']}] {content['key']}: {content['value']}\")\n",
-    "        \n",
+    "        formatted_results.append(\n",
+    "            f\"[{content['category']}] {content['key']}: {content['value']}\"\n",
+    "        )\n",
+    "\n",
     "    return \"Found memories:\\n\" + \"\\n\".join(formatted_results)\n",
+    "\n",
+    "\n",
     "# </solution>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11133f86",
+   "id": "4b876c8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,10 +223,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "697d78a4",
-   "metadata": {
-    "lines_to_next_cell": 3
-   },
+   "id": "9457d438",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test the memory agent\n",
@@ -245,12 +249,31 @@
     "    {\n",
     "        \"messages\": [\n",
     "            HumanMessage(\n",
-    "                \"Do you remember the mean age of the passengers? Check your memory.\"\n",
+    "                \"Do you remember the mean age of the passengers? \"\n",
+    "                \"Try recalling past analyses.\"\n",
     "            )\n",
     "        ]\n",
     "    }\n",
     ")\n",
     "print(response2[\"messages\"][-1].content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f29e5800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the message history\n",
+    "for msg in response2[\"messages\"]:\n",
+    "    if type(msg) is AIMessage and msg.tool_calls:\n",
+    "        print(\"=\" * 20 + \" Code \" + \"=\" * 20)\n",
+    "        if \"code\" in msg.tool_calls[0][\"args\"]:\n",
+    "            print(msg.tool_calls[0][\"args\"][\"code\"])\n",
+    "        print(\"=\" * 50)\n",
+    "    print(msg.content)\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
