--- a/exercises/08_coding_agent.ipynb
+++ b/exercises/08_coding_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "631ef277",
+   "id": "5107e006",
    "metadata": {},
    "source": [
     "# Exercise 8: Coding Agent - \"Plan in Code\"\n",
@@ -20,18 +20,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdc76985",
+   "id": "8b88af30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install smolagents databricks-langchain duckduckgo-search langchain-community\n",
+    "%pip install smolagents databricks-langchain ddgs langchain-community\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee7d004",
+   "id": "9fcbd2c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08f528b7",
+   "id": "54b089ac",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c73d17df",
+   "id": "36567685",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0244683b",
+   "id": "6c94720f",
    "metadata": {},
    "source": [
     "## 2. Setup Code Executor\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21aad29",
+   "id": "e740effc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49331612",
+   "id": "e65c6eaf",
    "metadata": {},
    "source": [
     "## 3. Define the Agent Logic\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac96789",
+   "id": "6eb945a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9aa7696",
+   "id": "b769ddce",
    "metadata": {},
    "outputs": [],
    "source": [
