--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a030240",
+   "id": "83eb9e9d",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,17 +24,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f2bc03f",
+   "id": "8a43f294",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install langchain langgraph duckduckgo-search databricks-langchain pydantic typing_extensions\n",
+    "%pip install langchain langgraph ddgs databricks-langchain pydantic typing_extensions\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cf670332",
+   "id": "e7a7f359",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1ccce36",
+   "id": "3d96a7ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "016c6ab5",
+   "id": "16747b16",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c3ad13",
+   "id": "6197dd4e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a959c7",
+   "id": "9b5d27a7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c65a4e9a",
+   "id": "a824e96d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c821e2cf",
+   "id": "98c2dea7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6136b67c",
+   "id": "0a936985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6951eaed",
+   "id": "16425d9b",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd2a0d3",
+   "id": "c2203604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56d4d25",
+   "id": "58e93299",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862d714d",
+   "id": "5b457f65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e227f2c",
+   "id": "b1cd3101",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7707468",
+   "id": "3ec0f32b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f4a949",
+   "id": "282cdebc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc9b6a84",
+   "id": "2e8249d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25efcab2",
+   "id": "d5ee5286",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -527,19 +527,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d510a6",
+   "id": "4a735182",
    "metadata": {},
    "source": [
-    "## Exercise 5: Benchmark Evaluation (GAIA)\n",
+    "## Exercise 5 (Bonus): Benchmark Evaluation (GAIA)\n",
     "\n",
-    "We will now evaluate our agent against the GAIA benchmark (Validation Level 1).\n",
-    "We compare the Deep Research Agent against a standard ReAct baseline."
+    "We will now evaluate our agent against some questions from the GAIA benchmark.\n",
+    "We compare the Deep Research Agent against a standard ReAct baseline.\n",
+    "\n",
+    "Your task is to play with the prompt, or the structure of the system to improve the score."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea04e0b7",
+   "id": "de595281",
    "metadata": {},
    "outputs": [],
    "source": [
