--- a/labs/lab_02_advanced.ipynb
+++ b/labs/lab_02_advanced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37e406b4",
+   "id": "fbedeb6a",
    "metadata": {},
    "source": [
     "# Lab 2: Multi-Agent System (MAS) with Progressive Disclosure\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fcc07d8",
+   "id": "462d0222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f40e373",
+   "id": "7e4e3612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a5bb948",
+   "id": "4fe6f83d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe90dbd",
+   "id": "eb7f7dc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5727cbda",
+   "id": "d3d4f351",
    "metadata": {},
    "source": [
     "## 2. Tool Registry & Discovery Mechanism\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682e34ce",
+   "id": "2c372a0e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08316170",
+   "id": "c0cea774",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d38232",
+   "id": "99fe8b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
     "    # Give it access to `search_tools` and `call_tool`.\n",
     "    # <solution>\n",
     "    return create_agent(\n",
-    "        llm, tools=[search_tools, call_tool], state_modifier=system_prompt\n",
+    "        llm, tools=[search_tools, call_tool], system_prompt=system_prompt\n",
     "    )\n",
     "    # </solution>\n",
     "\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04594218",
+   "id": "b14dbe44",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9cfdb6",
+   "id": "ca4308ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,21 +329,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753d75ec",
-   "metadata": {},
+   "id": "a9599c64",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
-    "# Run eval\n",
-    "# run_gaia_eval()\n",
-    "\n",
+    "# Try the system out\n",
     "question = (\n",
     "    \"What is the 10th Fibonacci number (where F1=0, F2=1) multiplied by \"\n",
     "    \"the square root of the birth year of the current Microsoft CEO? \"\n",
-    "    \"Use the 'delegate_code_task' tool to perform the calculation using Python. \"\n",
+    "    \"Delegate web search and coding tasks using appropriate tools. \"\n",
     "    \"Round the final answer to 2 decimal places.\"\n",
     ")\n",
     "res = main_agent.invoke({\"messages\": [HumanMessage(question)]})\n",
     "print(f\"Agent: {res['messages'][-1].content}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4643cfb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2.7 (Bonus): Try to optimize the agent to do well on the eval.\n",
+    "#\n",
+    "# run_gaia_eval()"
    ]
   }
  ],
