--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83eb9e9d",
+   "id": "2c96238e",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a43f294",
+   "id": "fc92bdbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a7f359",
+   "id": "dcdd8182",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d96a7ae",
+   "id": "8c34547b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +59,10 @@
     "from langchain_community.tools import DuckDuckGoSearchRun\n",
     "from langgraph.graph import END, START, StateGraph\n",
     "from langgraph.types import Command, Send, interrupt\n",
-    "from pydantic import BaseModel, Field\n",
     "\n",
     "# Initialize Model\n",
     "from llm import model as llm\n",
+    "from pydantic import BaseModel, Field\n",
     "\n",
     "# Initialize Search Tool\n",
     "search_tool = DuckDuckGoSearchRun()"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16747b16",
+   "id": "94870b75",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -92,13 +92,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6197dd4e",
+   "id": "168cecb6",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "# Exercise 1: Define the State classes\n",
+    "# Exercise 1: Define the State classes. Use either pydantic classes or `TypedDict`\n",
     "# <solution>\n",
     "class SubTaskState(TypedDict):\n",
     "    \"\"\"State for a single research worker agent.\"\"\"\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5d27a7",
+   "id": "35577d2d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a824e96d",
+   "id": "e99d452a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -158,6 +158,7 @@
     "\n",
     "    # Exercise 2.1: Implement the Chief Editor\n",
     "    # Use the LLM to generate a 'ResearchPlan' from the topic.\n",
+    "    # Hint: have a look at https://docs.langchain.com/oss/python/langchain/structured-output\n",
     "    # <solution>\n",
     "    planner = llm.with_structured_output(ResearchPlan)\n",
     "    prompt = (\n",
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c2dea7",
+   "id": "97f6df3c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -234,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a936985",
+   "id": "5e3e8e68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16425d9b",
+   "id": "c359200a",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -278,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2203604",
+   "id": "83b9ed5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e93299",
+   "id": "4537ff00",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -308,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b457f65",
+   "id": "505eda4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,6 +322,7 @@
     "def planner_node(state: ResearchStateHITL):\n",
     "    print(f\"--- [Planner] Planning: {state['topic']} ---\")\n",
     "\n",
+    "    # <solution>\n",
     "    planner = llm.with_structured_output(ResearchPlan)\n",
     "\n",
     "    # If there is a critique, we are regenerating\n",
@@ -336,6 +338,7 @@
     "    else:\n",
     "        # Initial plan\n",
     "        prompt = f\"Topic: {state['topic']}\\nReturn 3 distinct sub-topics.\"\n",
+    "    # </solution>\n",
     "\n",
     "    plan = planner.invoke(prompt)\n",
     "    return {\"sub_topics\": plan.sub_topics, \"approved\": False}\n",
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1cd3101",
+   "id": "86e26abc",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -387,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec0f32b",
+   "id": "bb74cb3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282cdebc",
+   "id": "e1fbb1ff",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -438,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e8249d6",
+   "id": "c395d453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ee5286",
+   "id": "fa62c68e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -527,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a735182",
+   "id": "5707f3e1",
    "metadata": {},
    "source": [
     "## Exercise 5 (Bonus): Benchmark Evaluation (GAIA)\n",
@@ -541,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de595281",
+   "id": "b1b78575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,8 +552,8 @@
     "\n",
     "import pandas as pd\n",
     "from ddgs import DDGS\n",
-    "from langchain import tool\n",
     "from langchain.agents import create_agent\n",
+    "from langchain.tools import tool\n",
     "\n",
     "\n",
     "@tool\n",
@@ -615,28 +618,16 @@
     "\n",
     "        print(f\"\\nProcessing Task: {task_id}\")\n",
     "\n",
-    "        # --- Agent 1: Deep Research (Our App) ---\n",
-    "        try:\n",
-    "            # We use the autonomous 'app' from Exercise 3\n",
-    "            result_dr = app.invoke({\"topic\": question})\n",
-    "            predicted_dr = result_dr.get(\"final_report\", \"No report generated.\")\n",
-    "        except Exception as e:\n",
-    "            predicted_dr = f\"Error during research: {str(e)}\"\n",
-    "        print(f\"[Deep Research Output]: {predicted_dr[:100]}...\")\n",
-    "\n",
+    "        # --- Agent 1: Deep Research ---\n",
+    "        result_dr = app.invoke({\"topic\": question})\n",
+    "        predicted_dr = result_dr.get(\"final_report\", \"No report generated.\")\n",
     "        judge_resp_dr = query_judge_model(question, predicted_dr, truth, metadata)\n",
     "        score_dr = extract_score(judge_resp_dr)\n",
     "        print(f\"Deep Research Score: {score_dr}\")\n",
     "\n",
     "        # --- Agent 2: ReAct Baseline ---\n",
-    "        print(\"[ReAct] Researching...\")\n",
-    "        try:\n",
-    "            result_react = react_executor.invoke({\"input\": question})\n",
-    "            predicted_react = result_react.get(\"output\", \"No output\")\n",
-    "        except Exception as e:\n",
-    "            predicted_react = f\"Error during ReAct: {str(e)}\"\n",
-    "        print(f\"[ReAct Output]: {predicted_react[:100]}...\")\n",
-    "\n",
+    "        result_react = agent_react.invoke({\"messages\": [question]})\n",
+    "        predicted_react = result_react[\"messages\"][-1].content\n",
     "        judge_resp_react = query_judge_model(question, predicted_react, truth, metadata)\n",
     "        score_react = extract_score(judge_resp_react)\n",
     "        print(f\"ReAct Score: {score_react}\")\n",
